# riff

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: clang_format.cmake  cppcheck.cmake
demo/: CMakeLists.txt  Makefile  demo.cpp  stresstest.cpp
include/riff/: archdata.hpp  riff.hpp
src/: CMakeLists.txt  Makefile  archdata.hpp  build_archdata.sh  buildlib.ar  getticks.h  knarr.cpp  knarr.hpp  riff.cpp  riff.hpp  ticksPerNs.cpp
test/: CMakeLists.txt  Makefile  runtests.sh  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
test/cppcheck/: suppressions-list.txt
test/gcov/: gcov.sh
